fixed header section alignment

--- a/docs/assets/css/layout.css
+++ b/docs/assets/css/layout.css
@@ -12,7 +12,7 @@ aside {
     flex-direction: column;
     flex-wrap: wrap;
     align-content: flex-end;
-    justify-content: space-between;
+    gap: 1.5rem;
     border-right-width: 3px;
     border-right-style: solid;
     padding: 0 1.5rem;
@@ -89,10 +89,6 @@ header nav {
 
 main > section {
     padding: .5rem;
-}
-
-section > * {
-    display: inline-block;
 }
 
 section > section {
